@@ -1,6 +1,8 @@
 package com.minisense.desafio.services;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -8,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.minisense.desafio.dto.UserDto;
 import com.minisense.desafio.entities.User;
+import com.minisense.desafio.exceptions.EntityNotFoundException;
 import com.minisense.desafio.repositories.UserRepository;
 
 @Service
@@ -20,21 +23,24 @@ public class UserService {
 	
 	public void saveUser (UserDto dto) {
 		User user = new User();
-		
 		user.setEmail(dto.getEmail());
 		user.setUserName(dto.getUserName());
-		
 		userRepository.save(user);
 	}
 	
 	@Transactional(readOnly = true)
 	public List<UserDto> finalAll() {
-		return userRepository.findAll().stream().map(u -> new UserDto(u)).toList();
+		return userRepository.findAll().stream().map(u -> new UserDto(u))
+				.collect(Collectors.toList());
 	}
 	
+	@Transactional(readOnly = true)
 	public UserDto findById(Long id) {
-		User user = userRepository.findById(id).get();
-		
+		Optional<User> userOpt = userRepository.findById(id);
+		User user = userOpt.orElseThrow(() -> new EntityNotFoundException("User not found"));
 		return new UserDto(user);
 	}
 }
+
+
+
